# PicoTokens

./: .env.example  .gitignore  Makefile  README.md
pico/: CMakeLists.txt  config.h.example  lwipopts.h  pico_w_client.c
pico/waveshare/: DEV_Config.c  DEV_Config.h  Debug.h
server/: go.mod  main.go  render.go
